--- a/navbar.css
+++ b/navbar.css
@@ -30,3 +30,10 @@ padding: 16px;
 margin-top: 30px;
 height: 1500px;
 }
+
+@media only screen and (max-width: 600px) {
+  .main {
+      padding: 6px;
+      height: 500px
+  }
+}
