--- a/navbar.css
+++ b/navbar.css
@@ -26,10 +26,9 @@ color: black;
 
 
 
-@media only screen and (max-width: 600px) {
+@media only screen and (min-width: 500px) {
 .navbar{
-  font-size: 20px;
-
+  font-size: 16px;
 }
 }
 
