--- a/comicparallax.css
+++ b/comicparallax.css
@@ -44,7 +44,7 @@ body {
   
   .section:nth-child(2) {
     box-shadow: inset 0 1px 80px rgba(0, 0, 0, 0.14);
-    background-color: #F7E7DE;
+    background-color: #ffffff;
     color: black;
     top: 100vh;
     z-index: 2;
@@ -55,7 +55,7 @@ body {
   
   .section:nth-child(3) {
     box-shadow: inset 0 1px 80px rgba(0, 0, 0, 0.14);
-    background-color: #F4DAE2;
+    background-color: #ffffff;
     color: black;
     top: 200vh;
     z-index: 3;
@@ -66,7 +66,7 @@ body {
   
   .section:nth-child(4) {
     box-shadow: inset 0 1px 80px rgba(0, 0, 0, 0.14);
-    background-color: #EDCEE5;
+    background-color: #ffffff;
     color: black;
     top: 300vh;
     z-index: 4;
@@ -77,7 +77,7 @@ body {
   
   .section:nth-child(5) {
     box-shadow: inset 0 1px 80px rgba(0, 0, 0, 0.14);
-    background-color: #DEC3E1;
+    background-color: #ffffff;
     color: black;
     top: 400vh;
     z-index: 5;
@@ -88,7 +88,7 @@ body {
   
   .section:nth-child(6) {
     box-shadow: inset 0 1px 80px rgba(0, 0, 0, 0.14);
-    background-color:#BBD5F2;
+    background-color:#ffffff;
     color: black;
     top: 500vh;
     z-index: 6;
@@ -99,7 +99,7 @@ body {
   
   .section:nth-child(7) {
     box-shadow: inset 0 1px 80px rgba(0, 0, 0, 0.14);
-    background-color: #D4E0F9;
+    background-color: #ffffff;
     color: black;
     top: 600vh;
     z-index: 7;
@@ -109,7 +109,7 @@ body {
   }
   
   .section:nth-child(8) {
-    background-color: #fff;
+    background-color: #ffffff;
     color: black;
     top: 900vh;
     z-index: 10;
