--- a/comicparallax.css
+++ b/comicparallax.css
@@ -17,16 +17,19 @@ body {
     text-align: center;
     position: absolute;
     width: 100%;
-    height: 100vh;
+    height: 100%;
     letter-spacing: 0px;
     overflow: hidden;
     clip: rect(0, auto, auto, 0);
   }
   .section .fixed {
+    justify-content: center;
     overflow: hidden;
     position: fixed;
-    top: 50%;
-    left: 50%;
+    width: 100%;
+    height: 100%;
+    top: 60%;
+    left:50%;
   }
   .section .white {
     color: #fff;
