--- a/parallax.css
+++ b/parallax.css
@@ -1,3 +1,64 @@
+.navbar {
+  overflow: hidden;
+  background: linear-gradient(141deg, #F4DAE2 0%, #DEC3E1 51%, #BBD5F2 75%);
+  text-align: center;
+  color: black;
+  position: fixed;
+  top: 0;
+  width: 100%;
+  z-index: 9999;
+  height: min-content;
+
+}
+.navbar a {
+float: none;
+display: inline-block;
+color: black;
+padding: 10px 15px 10px;
+text-decoration: none;
+vertical-align: middle;
+}
+
+.navbar a:hover {
+background: white;
+color: black;
+}
+
+
+
+@media only screen and (min-width: 500px) {
+.navbar{
+font-size: 16px;
+}
+}
+
+/* Small devices (portrait tablets and large phones, 600px and up) */
+@media only screen and (min-width: 600px) {
+.navbar{
+  font-size: 25px;
+}
+} 
+
+/* Medium devices (landscape tablets, 768px and up) */
+@media only screen and (min-width: 768px) {
+.navbar{
+  font-size: 30px;
+}
+}  
+
+/* Large devices (laptops/desktops, 992px and up) */
+@media only screen and (min-width: 992px) {
+.navbar{
+  font-size: 40px;
+}
+}
+
+/* Extra large devices (large laptops and desktops, 1200px and up) */
+@media only screen and (min-width: 1200px) {
+.navbar{
+  font-size: 50px;
+}
+}
 body {
     background: rgb(255, 255, 255);
     padding: 0;
